--- a/index_ru.html
+++ b/index_ru.html
@@ -2,8 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+
     <link href="fav_01.ico" rel="icon" type="image/x-icon">
-    <title>Резюме QA Игоря Шингелевича</title>
+
+    <title>Резюме Шингелевич QA</title>
     <link href="style.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/84affb6238.js"></script>
 </head>
@@ -11,8 +13,8 @@
 <header>
     <div class="header">
         <div class="header-content">
-            <h1>Игорь  Шингелевич</h1>
-            <h2>Инженер по тестированию</h2>
+            <h1>Игорь Шингелевич</h1>
+            <h2>Инженер по качеству</h2>
             <hr>
         </div>
         <nav class="language-switch">
@@ -35,23 +37,30 @@
             <section>
                 <div class="about">
                     <p>
-                        Более 1 года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества. Имею обширный
-                        опыт в области тестирования программного обеспечения с акцентом на ручное тестирование, автоматизированное
-                        тестирование, включая функциональное, производительное, стрессовое, удобство использования, регрессионное,
-                        системное тестирование веб-базированных и клиент-серверных приложений с использованием различных инструментов,
-                        таких как Postman, Devtools, Charles, Selenium, Java, Browserstack, Docker, GitHub, TestRail, Jenkins, JUnit5 и другие.
+                        Более 1+ года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества, имея
+                        обширный опыт в области тестирования программного обеспечения, включая ручное тестирование,
+                        автоматическое тестирование, которое включает функциональное, производительное, стрессовое,
+                        удобство, регрессивное, системное тестирование веб-основных и клиент-серверных приложений с
+                        использованием различных инструментов, таких как Postman, Devtools, Charles, Selenium, Java,
+                        Browserstack, Docker, GitHub, TestRail, Jenkins, JUnit5 и другие.
                     </p>
                     <br>
                     <p>
                         Инструменты автоматизации тестирования пользовательского интерфейса
                     </p>
 
+                    <!--<a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="img/Charles.png">
+                    </a>-->
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Java.svg">
                     </a>
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Gradle.svg">
                     </a>
+                    <!--<a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Intelij_IDEA.svg">
+                    </a>-->
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Selenide.svg">
                     </a>
@@ -73,6 +82,9 @@
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Allure_EE.svg">
                     </a>
+                    <!--<a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Jira.svg">
+                    </a>-->
                     <br>
                     <p>
                         Инструменты автоматизации тестирования REST API
@@ -81,114 +93,97 @@
                         <img height="50" src="resources/img/Rest-Assured.svg">
                     </a>
                     <a rel="noopener noreferrer" target="_blank">
-                        <img alt="" height="50" src="resources/img/Postman.png">
-                    </a>
-                    <br>
-                    <p>
-                        Инструменты функционального тестирования
-                    </p>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/Browserstack.svg">
-                    </a>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/Datagrip.png">
-                    </a>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/HTMLCSS.png">
-                    </a>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/Telegram.svg">
-                    </a>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/Notion.png">
-                    </a>
-                    <a rel="noopener noreferrer" target="_blank">
-                        <img height="50" src="resources/img/Miro.png">
+                        <a> <img alt="" height="50" src="resources/img/Postman.png">
+                        </a>
+                        <br>
+                        <p>
+                            Инструменты функционального тестирования
+                        </p>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Browserstack.svg">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Datagrip.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/HTMLCSS.png">
+                        </a>
+                        <!--
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/JS.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/Slack.svg">
+                        </a>-->
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Telegram.svg">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Notion.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Miro.png">
+                        </a>
+                        <!--<a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/Jira.svg">
+                        </a>-->
                     </a>
                 </div>
 
-                <div class="personal-data">
-                    <br>
-                    <ul>
-                        <li>
-                            <h4>
-                                <i class="fas fa-city"></i> Москва
-                                <i class="fas fa-phone"></i> +7 985 546 92 39
-                            </h4>
-                        </li>
-                        <li>
-                            <h4>
-                                <i class="fas fa-envelope"></i> shingelevich@gmail.com
-                            </h4>
-                        </li>
-
-                        <li>
-                            <h4>
-                                <a href="https://t.me/IgorShingelevich" target="_blank">
-                                    <i class="fab fa-telegram"></i> IgorShingelevich
-                                </a>
-                            </h4>
-                        <li>
-                            <h4>
-                                <i class="fas fa-file-download"></i>
-                                <a download="proposed_file_name" href="path_to_file">Скачать</a>
-                            </h4>
-                        </li>
-                    </ul>
-                </div>
             </section>
 
         </div>
 
         <div class="right-panel">
             <section class="education">
-                <h2 class="section-title">Образование</h2>
+                <h4 class="section-title">Образование</h4>
                 <hr>
-                <article>
+                <div class="education-item">
                     <div class="date">
-                        <h3>2022 - 2023</h3>
+                        <h3> <i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
                     </div>
-                    <div class="description">
-                        <h3>QA Guru</h3>
-                        <p>https://qa.guru/</p>
-                        <p>Инженер по автоматизации тестирования</p>
-                    </div>
-                </article>
-                <article>
+                    <p>Инженер по автоматизации тестирования QA</p>
+                </div>
+                <div class="education-item">
                     <div class="date">
-                        <h3>2010 - 2013</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> Южный Федеральный Университет</h3>
                     </div>
-                    <div class="description">
-                        <h3>Южный Федеральный Университет</h3>
-                        <p>Магистр психофизиологии</p>
-                    </div>
-                </article>
+                    <p>Магистр по психофизиологии</p>
+                </div>
             </section>
 
+
             <section class="experience">
-                <h2 class="section-title">Опыт работы</h2>
+                <h4 class="section-title">Опыт работы</h4>
                 <hr>
                 <article>
-                    <div class="date">
-                        <h3>2022 - настоящее время</h3>
-                    </div>
+
                     <div class="description">
-                        <h3>Пример компании</h3>
-                        <h4>Функциональный тестировщик</h4>
-                        <p>
-                            Более 1 года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества. Имею обширный
-                            опыт в области тестирования программного обеспечения с акцентом на ручное тестирование, автоматизированное
-                            тестирование, включая функциональное, производительное, стрессовое, удобство использования, регрессионное,
-                            системное тестирование веб-базированных и клиент-серверных приложений с использованием различных инструментов,
-                            таких как Postman, Devtools, Charles, Selenium, Java, Browserstack, Docker, GitHub, TestRail, Jenkins, JUnit5 и другие.
-                        </p>
+
+                        <div class="company">
+                            <h3><i class="fas fa-calendar-alt"></i> 2022 - настоящее время <i class="fas fa-building"></i>
+                                Gasworkers</h3>
+                            <h4><i class="fas fa-user"></i> Функциональный тестировщик</h4>
+                            <div class="responsibilities">
+                                <ul>
+                                    <li>Разработал и внедрил надежный фреймворк автоматизации для тестирования пользовательского интерфейса с использованием Selenide и Selenoid.</li>
+                                    <li>Создал и поддерживал тесты API с использованием RestAssured.</li>
+                                    <li>Интегрировал отчеты Allure для четкого и информативного отчетности по тестированию.</li>
+                                    <li>Работал в рамках CI/CD-пайплайна, обеспечивая плавные развертывания и высокое качество кода.</li>
+                                    <li>Сотрудничал с межфункциональными командами для тщательного тестирования новых функций и исправления ошибок.</li>
+                                </ul>
+
+                            </div>
+                        </div>
+
+
                     </div>
                 </article>
 
             </section>
 
             <section class="skills">
-                <h2 class="section-title">Навыки</h2>
+                <h4 class="section-title">Навыки</h4>
                 <hr>
                 <article>
                     <ul class="skills-list">
@@ -220,7 +215,36 @@
     </div>
 </main>
 <footer>
-
+    <div class="footer-row">
+        <div class="downloads">
+            <h4><i class="fas fa-file-download"></i> Загрузки</h4>
+            <a download="proposed_file_name" href="path_to_file">PDF eng</a>
+            <br>
+            <a download="proposed_file_name" href="path_to_file">PDF ru</a>
+        </div>
+    </div>
+    <div class="footer-row">
+        <div class="social-links">
+            <h4>Социальные сети</h4>
+            <a href="https://t.me/IgorShingelevich" target="_blank">
+                <i class="fab fa-telegram"></i> IgorShingelevich
+            </a>
+            <br>
+            <!--            https://github.com/IgorShingelevich-->
+            <a href="https://github.com/IgorShingelevich" target="_blank">
+                <i class="fab fa-github"></i> IgorShingelevich на GitHub
+            </a>
+        </div>
+    </div>
+    <div class="footer-row">
+        <div class="contacts">
+            <h4>Контактные данные</h4>
+            <p><i class="fas fa-city"></i> Москва<i class="fas fa-phone"></i> +7 985 546 92 39</p>
+            <!--            <p><i class="fas fa-phone"></i> +7 985 546 92 39</p>-->
+            <p><i class="fas fa-envelope"></i> shingelevich@gmail.com</p>
+        </div>
+    </div>
 </footer>
+
 </body>
 </html>
